Reuse ddraw emulated surface memory
Allows ddraw emulated surface memory to be reused.  Some games will try and access surface memory even after releasing the surface.  If using video memory then the memory can be accessed.  However, when using system memory the memory pointer is no longer valid.  By allowing reuse of the memory we can allow system memory pointers to be valid even after the surface has been released.  This prevents game crashes but still allows system memory use, rather than dynamic textures using video memory (which is very slow).

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -17,7 +17,7 @@ LoadFromScriptsOnly        = 0
 Dd7to9                     = 0
 D3d8to9                    = 0
 DDrawCompat                = 0
-DDrawResolutionHack        = 0
+DdrawResolutionHack        = 0
 Dinputto8                  = 0
 DisableHighDPIScaling      = 0
 DisableGameUX              = 0
@@ -44,12 +44,13 @@ DdrawOverrideBitMode       = 0
 
 [Dd7to9]
 AutoFrameSkip              = 0
+DdrawEmulateSurface        = 0
 DdrawLimitDisplayModeCount = 0
 DdrawMaintainAspectRatio   = 0
-DdrawUseNativeResolution   = 0
 DdrawOverrideWidth         = 0
 DdrawOverrideHeight        = 0
 DdrawOverrideRefreshRate   = 0
+DdrawUseNativeResolution   = 0
 
 [d3d9]
 AntiAliasing               = 0
