--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -39,12 +39,13 @@ DdrawOverrideBitMode       = 0
 
 [Dd7to9]
 AutoFrameSkip              = 0
+DdrawEmulateSurface        = 0
 DdrawLimitDisplayModeCount = 0
 DdrawMaintainAspectRatio   = 0
-DdrawUseNativeResolution   = 0
 DdrawOverrideWidth         = 0
 DdrawOverrideHeight        = 0
 DdrawOverrideRefreshRate   = 0
+DdrawUseNativeResolution   = 0
 
 [d3d9]
 AntiAliasing               = 0
