--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -50,6 +50,8 @@ DdrawMaintainAspectRatio   = 0
 DdrawOverrideWidth         = 0
 DdrawOverrideHeight        = 0
 DdrawOverrideRefreshRate   = 0
+DdrawScaledWidth           = 0
+DdrawScaledHeight          = 0
 DdrawUseNativeResolution   = 0
 
 [d3d9]
