--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -45,6 +45,8 @@ DdrawMaintainAspectRatio   = 0
 DdrawOverrideWidth         = 0
 DdrawOverrideHeight        = 0
 DdrawOverrideRefreshRate   = 0
+DdrawScaledWidth           = 0
+DdrawScaledHeight          = 0
 DdrawUseNativeResolution   = 0
 
 [d3d9]
