Add integer scaling clamp

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -46,13 +46,14 @@ DdrawOverrideBitMode       = 0
 AutoFrameSkip              = 0
 DdrawEmulateSurface        = 0
 DdrawLimitDisplayModeCount = 0
-DdrawMaintainAspectRatio   = 0
+DdrawUseNativeResolution   = 0
+DdrawClippedWidth          = 0
+DdrawClippedHeight         = 0
 DdrawOverrideWidth         = 0
 DdrawOverrideHeight        = 0
 DdrawOverrideRefreshRate   = 0
-DdrawScaledWidth           = 0
-DdrawScaledHeight          = 0
-DdrawUseNativeResolution   = 0
+DdrawIntegerScalingClamp   = 0
+DdrawMaintainAspectRatio   = 0
 
 [d3d9]
 AntiAliasing               = 0
