Add wrapper for dwmapi.dll

--- a/Stub/stub.vcxproj.filters
+++ b/Stub/stub.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClInclude Include="..\Wrappers\wininet.h">
       <Filter>Wrappers</Filter>
     </ClInclude>
+    <ClInclude Include="..\Wrappers\dwmapi.h">
+      <Filter>Wrappers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="BuildNo.rc" />
