--- a/Stub/stub.vcxproj
+++ b/Stub/stub.vcxproj
@@ -113,6 +113,7 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\Stub\dinput.dll" &gt;
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\Stub\dinput8.dll" &gt;nul
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\Stub\dplayx.dll" &gt;nul
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\Stub\dsound.dll" &gt;nul
+copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\Stub\dwmapi.dll" &gt;nul
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\Stub\msacm32.dll" &gt;nul
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\Stub\msvfw32.dll" &gt;nul
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\Stub\version.dll" &gt;nul
@@ -153,6 +154,7 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\Stub\winmmbase.dll" &
     <ClInclude Include="..\Wrappers\dinput8.h" />
     <ClInclude Include="..\Wrappers\dplayx.h" />
     <ClInclude Include="..\Wrappers\dsound.h" />
+    <ClInclude Include="..\Wrappers\dwmapi.h" />
     <ClInclude Include="..\Wrappers\msacm32.h" />
     <ClInclude Include="..\Wrappers\msvfw32.h" />
     <ClInclude Include="..\Wrappers\shared.h" />
