Add config option for SWAT 2

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -93,6 +93,9 @@ ForceSpeakerConfig         = 0
 SpeakerConfig              = 6
 StoppedDriverWorkaround    = 0
 
+[GamePatches]
+PatchForSWAT2              = 0
+
 [AppCompatData]
 LockEmulation              = 0
 BltEmulation               = 0
