--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -79,3 +79,6 @@ PrimaryBufferSamples       = 44100
 PrimaryBufferChannels      = 2
 ForceSpeakerConfig         = 0
 SpeakerConfig              = 6
+
+[GamePatches]
+PatchForSWAT2              = 0
