Add wrapper for wsock32.dll

--- a/Stub/stub.vcxproj.filters
+++ b/Stub/stub.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClInclude Include="..\Wrappers\dwmapi.h">
       <Filter>Wrappers</Filter>
     </ClInclude>
+    <ClInclude Include="..\Wrappers\wsock32.h">
+      <Filter>Wrappers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="BuildNo.rc" />
