--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -1727,6 +1727,9 @@
     <ClInclude Include="Wrappers\dwmapi.h">
       <Filter>Wrappers</Filter>
     </ClInclude>
+    <ClInclude Include="Wrappers\wsock32.h">
+      <Filter>Wrappers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Dllmain\BuildNo.rc">
