--- a/Stub/stub.vcxproj
+++ b/Stub/stub.vcxproj
@@ -126,12 +126,16 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\Stub\wsock32.dll" &gt
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\External\Hooking\Hook.cpp" />
+    <ClCompile Include="..\External\Hooking\HotPatch.cpp" />
+    <ClCompile Include="..\External\Hooking\IATPatch.cpp" />
     <ClCompile Include="..\External\MemoryModule\MemoryModule.c" />
     <ClCompile Include="..\Settings\ReadParse.cpp" />
     <ClCompile Include="..\Wrappers\wrapper.cpp" />
     <ClCompile Include="d3d8.cpp" />
     <ClCompile Include="ddraw.cpp" />
     <ClCompile Include="dinput.cpp" />
+    <ClCompile Include="Logging\Logging.cpp" />
     <ClCompile Include="stub.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -143,6 +147,7 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\Stub\wsock32.dll" &gt
     <ResourceCompile Include="stub.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\External\Hooking\Hook.h" />
     <ClInclude Include="..\Wrappers\bcrypt.h" />
     <ClInclude Include="..\Wrappers\cryptsp.h" />
     <ClInclude Include="..\Wrappers\d2d1.h" />
