Add feature to write directly to GDI

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -45,6 +45,7 @@ DdrawOverrideBitMode       = 0
 [Dd7to9]
 AutoFrameSkip              = 0
 DdrawEmulateSurface        = 0
+DdrawWriteToGDI            = 0
 DdrawLimitDisplayModeCount = 0
 DdrawUseNativeResolution   = 0
 DdrawClippedWidth          = 0
@@ -92,9 +93,6 @@ PrimaryBufferChannels      = 2
 ForceSpeakerConfig         = 0
 SpeakerConfig              = 6
 StoppedDriverWorkaround    = 0
-
-[GamePatches]
-PatchForSWAT2              = 0
 
 [AppCompatData]
 LockEmulation              = 0
