--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -40,6 +40,7 @@ DdrawOverrideBitMode       = 0
 [Dd7to9]
 AutoFrameSkip              = 0
 DdrawEmulateSurface        = 0
+DdrawWriteToGDI            = 0
 DdrawLimitDisplayModeCount = 0
 DdrawUseNativeResolution   = 0
 DdrawClippedWidth          = 0
@@ -79,6 +80,3 @@ PrimaryBufferSamples       = 44100
 PrimaryBufferChannels      = 2
 ForceSpeakerConfig         = 0
 SpeakerConfig              = 6
-
-[GamePatches]
-PatchForSWAT2              = 0
