Add Anisotropic Filtering support
- Update d3d8to9
- Add Anisotropic Filtering support
- Minor update for AntiAliasing
- Add ForceVsyncMode

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -52,9 +52,11 @@ DdrawIntegerScalingClamp   = 0
 DdrawMaintainAspectRatio   = 0
 
 [d3d9]
+AnisotropicFiltering       = 0
 AntiAliasing               = 0
 EnableVSync                = 0
 EnableWindowMode           = 0
+ForceVsyncMode             = 0
 FullscreenWindowMode       = 0
 WindowModeBorder           = 0
 
