Add AudioClipDetection and fix SpeakerConfig
 - Add 20ms fade out for clipped audio
 - Replace newer Speaker Configurations

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -82,7 +82,6 @@ ForceCertification         = 0
 ForceExclusiveMode         = 0
 ForceSoftwareMixing        = 0
 ForceHardwareMixing        = 0
-PreventSpeakerSetup        = 0
 ForceHQ3DSoftMixing        = 0
 ForceNonStaticBuffers      = 0
 ForceVoiceManagement       = 0
@@ -90,8 +89,9 @@ ForcePrimaryBufferFormat   = 0
 PrimaryBufferBits          = 16
 PrimaryBufferSamples       = 44100
 PrimaryBufferChannels      = 2
-ForceSpeakerConfig         = 0
-SpeakerConfig              = 6
+AudioClipDetection         = 0
+AudioFadeOutDelayMS        = 20
+FixSpeakerConfigType       = 1
 StoppedDriverWorkaround    = 0
 
 [AppCompatData]
