--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -72,7 +72,6 @@ ForceCertification         = 0
 ForceExclusiveMode         = 0
 ForceSoftwareMixing        = 0
 ForceHardwareMixing        = 0
-PreventSpeakerSetup        = 0
 ForceHQ3DSoftMixing        = 0
 ForceNonStaticBuffers      = 0
 ForceVoiceManagement       = 0
@@ -80,5 +79,4 @@ ForcePrimaryBufferFormat   = 0
 PrimaryBufferBits          = 16
 PrimaryBufferSamples       = 44100
 PrimaryBufferChannels      = 2
-ForceSpeakerConfig         = 0
-SpeakerConfig              = 6
+AudioClipDetection         = 0
