Filter input from other active windows

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -24,6 +24,7 @@ DisableGameUX              = 0
 DSoundCtrl                 = 0
 DxWnd                      = 0
 EnableDdrawWrapper         = 0
+EnableDinput8Wrapper       = 0
 EnableDsoundWrapper        = 0
 ForceTermination           = 0
 HandleExceptions           = 0
@@ -75,7 +76,10 @@ SetFullScreenLayer         = 0
 SetNamedLayer              = 
 IgnoreWindowName           = 
 
-[DSoundCtrl]
+[dinput8]
+FilterNonActiveInput       = 0
+
+[dinput]
 Num2DBuffers               = 0
 Num3DBuffers               = 0
 ForceCertification         = 0
