--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -19,9 +19,10 @@ D3d8to9                    = 0
 DDrawCompat                = 0
 Dinputto8                  = 0
 DisableGameUX              = 0
-DSoundCtrl                 = 0
 DxWnd                      = 0
 EnableDdrawWrapper         = 0
+EnableDinputWrapper        = 0
+EnableDsound8Wrapper       = 0
 HandleExceptions           = 0
 SingleProcAffinity         = 0
 
@@ -65,7 +66,10 @@ FullScreen                 = 0
 ForceWindowResize          = 0
 WaitForWindowChanges       = 0
 
-[DSoundCtrl]
+[dinput8]
+FilterNonActiveInput       = 0
+
+[dsound]
 Num2DBuffers               = 0
 Num3DBuffers               = 0
 ForceCertification         = 0
