--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "External/d3d8to9"]
 	path = External/d3d8to9
 	url = https://github.com/crosire/d3d8to9
+	branch = main
 [submodule "External/detours"]
 	path = External/detours
 	url = https://github.com/microsoft/detours
