Add DdrawReadFromGDI option

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -41,6 +41,7 @@ DdrawOverrideBitMode       = 0
 [Dd7to9]
 AutoFrameSkip              = 0
 DdrawEmulateSurface        = 0
+DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
 DdrawLimitDisplayModeCount = 0
 DdrawUseNativeResolution   = 0
