Fix error in ini file

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -80,7 +80,7 @@ IgnoreWindowName           =
 [dinput8]
 FilterNonActiveInput       = 0
 
-[dinput]
+[dsound]
 Num2DBuffers               = 0
 Num3DBuffers               = 0
 ForceCertification         = 0
