--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -21,8 +21,8 @@ Dinputto8                  = 0
 DisableGameUX              = 0
 DxWnd                      = 0
 EnableDdrawWrapper         = 0
-EnableDinputWrapper        = 0
-EnableDsound8Wrapper       = 0
+EnableDinput8Wrapper       = 0
+EnableDsoundWrapper        = 0
 HandleExceptions           = 0
 SingleProcAffinity         = 0
 
