Fix a few setting issues

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -17,7 +17,6 @@ LoadFromScriptsOnly        = 0
 Dd7to9                     = 0
 D3d8to9                    = 0
 DDrawCompat                = 0
-DdrawResolutionHack        = 0
 Dinputto8                  = 0
 DisableHighDPIScaling      = 0
 DisableGameUX              = 0
@@ -42,6 +41,7 @@ DDrawCompatNoProcAffinity  = 0
 ConvertToDirectDraw7       = 0
 ConvertToDirect3D7         = 0
 DdrawOverrideBitMode       = 0
+DdrawResolutionHack        = 0
 
 [Dd7to9]
 AutoFrameSkip              = 0
@@ -59,10 +59,12 @@ DdrawIntegerScalingClamp   = 0
 DdrawMaintainAspectRatio   = 0
 
 [d3d9]
+AnisotropicFiltering       = 0
 AntiAliasing               = 0
 CacheClipPlane             = 0
 EnableVSync                = 0
 EnableWindowMode           = 0
+ForceVsyncMode             = 0
 FullscreenWindowMode       = 0
 WindowModeBorder           = 0
 
