Fix debug build

--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -49,7 +49,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;FULLSCREENLOG;WRAPPERLOGGING;DDRAWCOMPATLOG;DDRAWCOMPAT_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;FULLSCREENLOG;WRAPPERLOGGING;DISABLE_COMMON_LOGGING;DDRAWCOMPATLOG;DDRAWCOMPAT_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <ObjectFileName>$(SolutionDir)bin\Intermediate\$(Configuration)\Object\%(RelativeDir)</ObjectFileName>
       <WarningLevel>Level4</WarningLevel>
@@ -73,7 +73,7 @@ copy /Y "$(ProjectDir)Resources\dxwnd.exe" "$(TargetDir)Build\" &gt;nul</Command
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;DDRAWCOMPAT_EXPORTS;D3D8TO9NOLOG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;DISABLE_COMMON_LOGGING;DDRAWCOMPAT_EXPORTS;D3D8TO9NOLOG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <ObjectFileName>$(SolutionDir)bin\Intermediate\$(Configuration)\Object\%(RelativeDir)</ObjectFileName>
       <WarningLevel>Level4</WarningLevel>
@@ -323,6 +323,7 @@ cmd /q /c "cd /D ""$(ProjectDir)d3d8\"" &amp;&amp; del build.bat"</Command>
     <ClCompile Include="External\dinputto8\IDirectInputTypes.cpp" />
     <ClCompile Include="External\dinputto8\IDirectInputX.cpp" />
     <ClCompile Include="External\dinputto8\InterfaceQuery.cpp" />
+    <ClCompile Include="External\dinputto8\Logging\Logging.cpp" />
     <ClCompile Include="External\dinputto8\Versions\IDirectInput2A.cpp" />
     <ClCompile Include="External\dinputto8\Versions\IDirectInput2W.cpp" />
     <ClCompile Include="External\dinputto8\Versions\IDirectInput7A.cpp" />
@@ -608,6 +609,7 @@ cmd /q /c "cd /D ""$(ProjectDir)d3d8\"" &amp;&amp; del build.bat"</Command>
     <ClInclude Include="External\dinputto8\IDirectInputEffect.h" />
     <ClInclude Include="External\dinputto8\IDirectInputTypes.h" />
     <ClInclude Include="External\dinputto8\IDirectInputX.h" />
+    <ClInclude Include="External\dinputto8\Logging\Logging.h" />
     <ClInclude Include="External\dinputto8\Versions\IDirectInput2A.h" />
     <ClInclude Include="External\dinputto8\Versions\IDirectInput2W.h" />
     <ClInclude Include="External\dinputto8\Versions\IDirectInput7A.h" />
