Add feature to fix byte alignment issues in some games

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -39,6 +39,7 @@ DDrawCompatNoProcAffinity  = 0
 [ddraw]
 ConvertToDirectDraw7       = 0
 ConvertToDirect3D7         = 0
+DdrawFixByteAlignment      = 0
 DdrawOverrideBitMode       = 0
 DdrawResolutionHack        = 0
 
