--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -36,6 +36,7 @@ DDrawCompatNoProcAffinity  = 0
 [ddraw]
 ConvertToDirectDraw7       = 0
 ConvertToDirect3D7         = 0
+DdrawFixByteAlignment      = 0
 DdrawOverrideBitMode       = 0
 
 [Dd7to9]
