Add options for Vertex Processing in d3d9
Fix for #111

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -64,6 +64,8 @@ AntiAliasing               = 0
 CacheClipPlane             = 0
 EnableVSync                = 0
 EnableWindowMode           = 0
+ForceMixedVertexProcessing = 0
+ForceSystemMemVertexCache  = 0
 ForceVsyncMode             = 0
 FullscreenWindowMode       = 0
 WindowModeBorder           = 0
