--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -59,6 +59,8 @@ AnisotropicFiltering       = 0
 AntiAliasing               = 0
 EnableVSync                = 0
 EnableWindowMode           = 0
+ForceMixedVertexProcessing = 0
+ForceSystemMemVertexCache  = 0
 ForceVsyncMode             = 0
 FullscreenWindowMode       = 0
 WindowModeBorder           = 0
