Add empty class for DirectShowEmulation

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -42,6 +42,7 @@ ConvertToDirect3D7         = 0
 DdrawFixByteAlignment      = 0
 DdrawOverrideBitMode       = 0
 DdrawResolutionHack        = 0
+DirectShowEmulation        = 0
 
 [Dd7to9]
 AutoFrameSkip              = 0
