--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -86,6 +86,9 @@
     <Filter Include="External\dinputto8\Logging">
       <UniqueIdentifier>{c9ee6616-e41e-4e80-a435-0898ab9b224a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="DirectShow">
+      <UniqueIdentifier>{3549a8a2-e4e1-4598-988f-c070d6fe7b84}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="libraries\dwmapi.cpp">
@@ -807,6 +810,9 @@
     </ClCompile>
     <ClCompile Include="External\dinputto8\Logging\Logging.cpp">
       <Filter>External\dinputto8\Logging</Filter>
+    </ClCompile>
+    <ClCompile Include="DirectShow\IAMMediaStream.cpp">
+      <Filter>DirectShow</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1708,6 +1714,9 @@
     </ClInclude>
     <ClInclude Include="External\dinputto8\Logging\Logging.h">
       <Filter>External\dinputto8\Logging</Filter>
+    </ClInclude>
+    <ClInclude Include="DirectShow\IAMMediaStream.h">
+      <Filter>DirectShow</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
