Add options to hook System32 version of DX

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -21,10 +21,19 @@ Dinputto8                  = 0
 DisableGameUX              = 0
 DxWnd                      = 0
 EnableDdrawWrapper         = 0
+EnableD3d9Wrapper          = 0
 EnableDinput8Wrapper       = 0
 EnableDsoundWrapper        = 0
 HandleExceptions           = 0
 SingleProcAffinity         = 0
+
+[Hooking]
+DdrawHookSystem32          = 0
+D3d8HookSystem32           = 0
+D3d9HookSystem32           = 0
+DinputHookSystem32         = 0
+Dinput8HookSystem32        = 0
+DsoundHookSystem32         = 0
 
 [DDrawCompat]
 DDrawCompat20              = 0
