Add experimental deinterlacing feature

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -59,6 +59,7 @@ DirectShowEmulation        = 0
 [Dd7to9]
 AutoFrameSkip              = 0
 DdrawEmulateSurface        = 0
+DdrawDeInterlacing         = 0
 DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
 DdrawLimitDisplayModeCount = 0
