--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -46,6 +46,7 @@ DdrawOverrideBitMode       = 0
 [Dd7to9]
 AutoFrameSkip              = 0
 DdrawEmulateSurface        = 0
+DdrawDeInterlacing         = 0
 DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
 DdrawLimitDisplayModeCount = 0
