--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -64,6 +64,7 @@ AnisotropicFiltering       = 0
 AntiAliasing               = 0
 EnableVSync                = 0
 EnableWindowMode           = 0
+ForceExclusiveFullscreen   = 0
 ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
 ForceVsyncMode             = 0
