Add support for Direct3D9ForceHybridEnumeration
#159

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -83,6 +83,7 @@ ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
 ForceVsyncMode             = 0
 FullscreenWindowMode       = 0
+GraphicsDisplayAdapter     = 0
 WindowModeBorder           = 0
 
 [FullScreen]
