--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -78,6 +78,7 @@ AntiAliasing               = 0
 CacheClipPlane             = 0
 EnableVSync                = 0
 EnableWindowMode           = 0
+ForceDirect3D9On12         = 0
 ForceExclusiveFullscreen   = 0
 ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
